--- a/src/alpha/langs/lang.lv.json
+++ b/src/alpha/langs/lang.lv.json
@@ -1,67 +1,67 @@
 {
-  "running":"Versija : #179 %1",
-  "runningLite":"plug&#179; darbojas Lite režīmā!",
+  "running":"Ieslēdz plug&#179; versija %1",
+  "runningLite":"plug&#179; darbojas Vieglajā režīmā!",
   "runningLiteInfo":"Vairākas funkcijas nedarbosies.",
-  "commandsHelp":"Raksti '\/commands' lai redzētu čata komandas.",
+  "commandsHelp":"Raksti '\/commands' lai redzētu vairākas čata komandas.",
   "autorespond":{
-    "default":"Es esmu prom no klaviatūras",
-    "disable":"Izslēgt automātisko AFK atbildi",
+    "default":"Esmu prom no klaviatūras.",
+    "disable":"Izslēdzat automātisko AFK atbildi, lai čatotu",
     "nextIn":"Nākamā automātiskā AFK atbildes ziņa tiks sūtīta %1",
     "next":"AFK automātiskā atbilde kad tevi piemin",
     "commandDisable":"%1 AFK ziņa atspējota",
     "commandNotEnabled":"%1 AFK ziņa nebija iespējota"
   },
   "autojoin":{
-    "commandDisable":"%1 automātiskā pievienošanās DJ sarakstam atspējota",
-    "commandNotEnabled":"%1 Automātiskā DJ pieslēgšanās nav atļauta"
+    "commandDisable":"%1 automātiskā pievienošanās DJ sarakstam izslēgta",
+    "commandNotEnabled":"%1 Automātiskā Pieslēgšanās nav ieslēgta"
   },
   "fullscreen":{
-    "shrink":"Shrink",
-    "enlarge":"Enlarge"
+    "shrink":"Samazināt",
+    "enlarge":"Palielināt"
   },
   "commands":{
     "header":"plug&#179; Komandas",
-    "userCommands":"Lietotāja komandas",
-    "modCommands":"Moderācijas komandas",
+    "userCommands":"Lietotāju komandas",
+    "modCommands":"Moderācijas Komandas",
     "variables":{
       "username":"lietotājvārds",
       "word":"vārds",
       "on":"ieslēgts",
       "off":"izslēgts",
       "reason":"iemesls",
-      "number":"number"
+      "number":"numurs"
     },
     "descriptions":{
-      "join":"Lietotājs pievienojās",
-      "leave":"Lietotājs aizgāja",
-      "whoami":"saņemt informāciju par sevi",
-      "mute":"uzlikt skaļumu uz 0",
+      "join":"pievienoties skatuvei\/rindai",
+      "leave":"Aiziet no skatuves\/rindas",
+      "whoami":"saņem informāciju par sevi",
+      "mute":"iestatīt skaļumu uz 0",
       "automute":"piefiksēt pašreizējo dziesmu lai nākotnē to automātiski ignorētu",
-      "unmute":"uzlikt skaļumu uz iepriekšējo",
-      "nextsong":"parādīt savu nākamo dziesmu un vai viņa nav bijusi pagātnē",
-      "refresh":"restartēt video",
-      "alertson":"atskaņot signālu kad noteiktais vārds tiek uzrakstīts čatā",
-      "alertsoff":"beigt atskaņot skaņas kad jebkāds vārds tiek uzrakstīts čatā",
+      "unmute":"Iestatīt iepriekšējo skaļumu",
+      "nextsong":"parādīt savu nākamo dziesmu un vai tā nav bijusi pagātnē",
+      "refresh":"pārlādēt video",
+      "alertson":"atskaņot skaņu kad noteiktais vārds tiek uzrakstīts čatā",
+      "alertsoff":"beigt atskaņot skaņas kad noteiktais vārds tiek uzrakstīts čatā",
       "grab":"pievienot esošo dziesmu izvēlētajam sarakstam",
-      "badges":"show\/hide the user badges in chat",
-      "getpos":"apstīties pašreizējo waitlist pozīciju",
-      "version":"parādīt plug³ versiju",
+      "badges":"Paslēpt\/Rādīt lietotāja nozīmes čatā",
+      "getpos":"paskatīties pašreizējo rindas pozīciju",
+      "version":"parāda versijas numuru",
       "commands":"parādīt šo sarakstu",
-      "link":"Iekš čata uzrakstīt linku uz plugCubed",
+      "link":"iekopēt čatā plugCubed saiti",
       "whois":"rāda galveno informāciju par lietotāju",
       "skip":"izlaist pašreizējo dziesmu",
       "ban":"izmest izvēlēto lietotāju",
-      "lockskip":"aizlēgt DJ sarakstu, izlaist dziesmu un pēc tam atslēgt",
+      "lockskip":"aizslēgt DJ rindu, izlaist dziesmu un pēc tam atslēgt",
       "lock":"aizslēgt DJ sarakstu",
       "unlock":"atslēgt DJ saraksti",
-      "add":"pievienot izvēlēto lietotāju DJ sarakstam",
-      "remove":"izņemt izvēlēto lietotāju no DJ saraksta",
+      "add":"pievienot izvēlēto lietotāju DJ rindai",
+      "remove":"izņemt izvēlēto lietotāju no DJ rindas",
       "whois all":"parādīt visu lietotāju id un to lietotājvārdus kas atrodas šajā istabā",
       "banall":"liegt pieeju visiem lietotājiem kas ir šajā istabā",
-      "status":"shows status of plug servers"
+      "status":"parāda statusu no plug serveriem"
     },
     "responses":{
-      "alertson":"Dod skaņas paziņojumu šiem vārdiem:%1",
+      "alertson":"Atskaņot skaņu uz šādiem vārdiem: %1",
       "alertsoff":"Vairs nedod skaņas paziņojumu noteiktiem vārdiem",
       "nextsong":"Tava nākošā dziesma ir %1 no %2",
       "isHistory":"Brīdinājums: Šī dziesma vēlprojām atrodas vēsturē (%1 no %2)",
@@ -71,7 +71,7 @@
         "unregistered":"%1 izņemts no automātiskās apklusēšanas reģistra."
       },
       "status":{
-        "rest":"REST: %1 %2 [%3ms]",
+        "rest":"PĀRĒJAIS: %1 %2 [%3ms]",
         "socket":"Socket: %1 %2 [%3ms]"
       }
     }
@@ -87,90 +87,90 @@
     "join":"Lietotājs pievienojās!",
     "leave":"Lietotājs aizgāja",
     "grab":"Lietotājs Paņēma",
-    "meh":"Lietotāja meh",
-    "stats":"Dziesma sākas",
-    "updates":"Dziesmu atjauninājumi",
-    "history":"Dziesmu vēsture",
-    "songUnavailable":"Song Unavailable",
-    "songLength":"Dziesmas garums",
+    "meh":"Lietotāju Meh'i",
+    "stats":"Dziesmu Stati",
+    "updates":"Dziesmu Atjauninājumi",
+    "history":"Dziesmas Vēsturē",
+    "songUnavailable":"Dziesma Nav Pieejama",
+    "songLength":"Dziesmu Garums (%1 min)",
     "message":{
       "grab":"paņēma %1 - %2",
-      "stats":"Stati: %1 Wooti -- %2 Mehi -- %3Pievienoja savam sarakstam",
-      "updates":"Tagat skan: %1  %2<br \/>Dj: %3",
-      "meh":"%1 meh  šo dziesmu",
-      "join":"Pievienojās kopienai",
+      "stats":"Stati: %1 Woot'i -- %2 Meh'i -- %3 Paņēma",
+      "updates":"Tagad skan: %1  %2<br \/>Dj: %3",
+      "meh":"meh'oja šo dziesmu",
+      "join":"pievienojās kopienai",
       "leave":"pameta kopienu",
-      "history":"Mūzika pagātnē (%1 no %2)",
-      "historySkipped":"Mūzika ir pagātnē (%1 no %2), bet tikka izlaista.",
-      "songLength":"Mūzika ir garāka par %1 minūtem",
-      "songPrivate":"Song is private",
-      "songNotFound":"Song not found",
-      "songEmbed":"Song has embedding disabled",
-      "songStreamable":"Song doesn't support streaming"
+      "history":"Dziesma vēsturē (%1 no %2)",
+      "historySkipped":"Dziesma ir vēsturē (%1 no %2), bet tika izlaista",
+      "songLength":"Dziesma ir garāka par %1 minūtem",
+      "songPrivate":"Dziesma ir privāta",
+      "songNotFound":"Dziesma nav atrasta",
+      "songEmbed":"Dziesmas iekļaušana ir izslēgta",
+      "songStreamable":"Dziesmai nevar ieslēgt straumēšanu"
     }
   },
   "info":{
     "header":"Lietotāja informācija",
-    "name":"Segvārds",
-    "title":"tituls",
+    "name":"Vārds",
+    "title":"Tituls",
     "specialTitles":{
       "developer":"plug&#179; Izstrādātājs",
       "sponsor":"plug&#179; Sponsors",
-      "ambassador":"plug&#179; vēstnieks",
-      "donatorDiamond":"plug&#179; Diamond ziedotājs",
-      "donatorPlatinum":"plug&#179;Platiuma ziedotājs",
+      "ambassador":"plug&#179; pārstāvis",
+      "donatorDiamond":"plug&#179; Dimanta Ziedotājs",
+      "donatorPlatinum":"plug&#179; Platīna Ziedotājs",
       "donatorGold":"plug&#179; Zelta Ziedotājs",
       "donatorSilver":"plug&#179; Sudraba Ziedotājs",
-      "donatorBronze":"plug&#179; Bronzas ziedotājs",
-      "special":"plug&#179;Speciāls atbalstītājs - %1"
+      "donatorBronze":"plug&#179; Bronza ziedotājs",
+      "special":"plug&#179; Īpašais Atbalstītājs - %1"
     },
     "id":"ID",
-    "rank":"Statuss",
-    "joined":"Pievienošanās laiks",
+    "rank":"Rangs",
+    "joined":"Pievienojās",
     "status":"Statuss",
-    "vote":"Balso",
+    "vote":"Balsot",
     "position":"Pozīcija",
     "points":"Punkti",
-    "wootCount":"Woot skaits",
-    "mehCount":"Meh skaits",
-    "ratio":"Woot\/Meh attiecība",
-    "djing":"Dīdžejo",
-    "notInList":"Nav dj listē.",
-    "inWaitlist":"%1\/%2 iekš gaidīšanas saraksta",
-    "userDjing":"%1 Pašlaik Dīdžejo",
-    "userNextDJ":"%1 Nākaimais Dīdžejs",
-    "disconnects":"Iziet",
-    "lastDisconnect":"Pēdējā iziešana",
+    "wootCount":"Woot'u Skaits",
+    "mehCount":"Meh'u Skaits",
+    "ratio":"Woot\/Meh Attiecība",
+    "djing":"Pašlaik Dj",
+    "notInList":"Nav Rindā",
+    "inWaitlist":"%1\/%2 iekš rindas",
+    "userDjing":"%1 pašlaik Dj",
+    "userNextDJ":"%1 būs nākamais Dj",
+    "disconnects":"Atvienojās",
+    "lastDisconnect":"Pēdējā Atvienošanās",
     "lastPosition":"Pozīcija",
     "time":"Laiks"
   },
   "ranks":{
     "you":"Jūs",
     "regular":"Parasts",
-    "residentdj":"Pieredzējis DJ",
+    "residentdj":"Rezidējošais DJ",
     "bouncer":"Uzraugs",
     "manager":"Menedžeris",
-    "cohost":"Līdzīpašnieks",
-    "host":"Īpašnieks.",
-    "ambassador":"Vēstnieks",
-    "admin":"Administrators"
+    "cohost":"Līdzturētājs",
+    "host":"Uzturētājs",
+    "ambassador":"Pārstāvis",
+    "admin":"Admins"
   },
   "roomSpecificSettings":{
-    "infoHeader":"Šī istaba lieto īpašus iestatījumus",
-    "infoHeaderCredits":"Šī telpa izmanto speciālus iestatījumus pēc %1",
-    "infoDisable":"Tu vari izslēgt viņus izvēlnē"
+    "infoHeader":"Šī kopiena lieto īpašus iestatījumus",
+    "infoHeaderCredits":"Šī kopiena lieto speciālus iestatījumus pēc %1",
+    "infoDisable":"Tu viņus vari atspējot izvelnē"
   },
   "menu":{
-    "autowoot":"Automātiskā balsošana",
-    "autojoin":"Automātiskā pievienošanās",
-    "customchatcolors":"Mainīt čata krāsas",
-    "autorespond":"AFK auto atbildēšana",
-    "notify":"Paziņojumi",
-    "afktimers":"AFK skaitītājs",
-    "etatimer":"ETA Timer",
-    "roomsettings":"Istabas iestatījumi",
-    "chatimages":"čata foto",
-    "twitchemotes":"Twitch Emotikonas",
+    "autowoot":"Auto-Woot",
+    "autojoin":"Auto-Join",
+    "customchatcolors":"Maini Čata Krāsas",
+    "autorespond":"AFK Auto Atbildēšana",
+    "notify":"Ziņojumi",
+    "afktimers":"AFK Taimeri",
+    "etatimer":"ETA Taimeris",
+    "roomsettings":"Kopienas Iestatījumi",
+    "chatimages":"Bildes Čatā",
+    "twitchemotes":"Twitch Smaidiņi",
     "controlpanel":"Vadības Panelis"
   },
   "vote":{
@@ -178,12 +178,12 @@
     "woot":"Woot",
     "grab":"Paņemt",
     "undecided":"Neizlēmis",
-    "djing":"Dīdžejo"
+    "djing":"DJ"
   },
   "tooltip":{
-    "stream":"Ieslēgt Video\/Audio",
-    "clear":"izstīrīt čatu",
-    "afk":"Afk ziņa",
+    "stream":"Pārslēgt Video\/Audio Straumēšanu",
+    "clear":"Iztīrīt Čatu",
+    "afk":"AFK Ziņojums",
     "reset":"Atiestatīt uz noklusējumu",
     "muted":"Visas dziesmas ir apklusinātas",
     "mutedOnce":"Pašreizējā dziesma ir apklusināta"
@@ -191,12 +191,12 @@
   "error":{
     "userNotFound":"Lietotājs netika atrasts",
     "unknownModeration":"Nezināma moderācija",
-    "unknownMenuKey":"Nezināma izvēlne %1",
-    "missingReason":"Trūkst iemesls",
-    "noLiteSupport":"Tas netiek atbalstīts plug&#179; Lite!",
+    "unknownMenuKey":"Nezināma izvēlne; %1",
+    "missingReason":"Nav Iemesla",
+    "noLiteSupport":"Šis nav atbalstīts iekš plug&#179; Vieglā",
     "errorGettingPlaylistInfo":"Kļūda iegūstot saraksta informāciju",
-    "noPlaylistsFound":"Nav atrastu sarakstu",
-    "yourActivePlaylistIsFull":"Tavs aktīvais saraksts ir pilns",
+    "noPlaylistsFound":"Atskaņošanas Saraksti nav atrasti",
+    "yourActivePlaylistIsFull":"Tavs aktīvais atskaņošanas saraksts ir pilns",
     "noNextSong":"Tev nav ierindotas dziesmas"
   }
 }
